<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addStudentParent"
    tools:context=".addStudent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:id="@+id/picture"
        android:src="@drawable/ic_action_name"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/picture"
        android:id="@+id/addPicture"
        android:text="@string/addPicture"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addPicture"
        android:inputType="text"
        android:id="@+id/firstName"
        android:hint="@string/firstName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstName"
        android:inputType="text"
        android:id="@+id/lastName"
        android:hint="@string/lastName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/studentID"
        android:hint="@string/studentID"
        android:layout_below="@+id/lastName"
        android:inputType="number"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/studentID"
        android:id="@+id/saveStudent"
        android:text="@string/saveStudent"/>

</RelativeLayout>