<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addClassParent"
    tools:context=".addClass">

    <EditText
        android:id="@+id/className"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/className"
        android:inputType="text" />

    <EditText
        android:id="@+id/classNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/className"
        android:hint="@string/classNumber"
        android:inputType="number" />

    <Button
        android:id="@+id/addStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/classNumber"
        android:text="@string/addStudent" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/studentList"
        android:layout_below="@+id/addStudent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saveButton"
        android:text="@string/save"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>